# administrator_ti

./: .gitignore  CMakeLists.txt
src/: Administrator_TI.depend  DB_Menegement.cpp  Functions.cpp  TCP_connection.cpp  main.cpp
src/include/: DB_Menegement.h  Functions.h  TCP_connection.h
